# kine-agent

./: .gitignore  DESIGN.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  windows-tests.yml
docs/: approval-architecture.md
public/: site.webmanifest
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/acp-locks/claude/: package-lock.json  package.json
src-tauri/acp-locks/codex/: package-lock.json  package.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapter.rs  agent_paths.rs  auth.rs  commands.rs  events.rs  external_sessions.rs  fsbrowse.rs  git.rs  inspect.rs  lib.rs  main.rs  models.rs  permission.rs  proc.rs  provider_models.rs  review.rs  store.rs  worktree.rs
src-tauri/src/acp/: client.rs  fs_guard.rs  jsonrpc.rs  mod.rs
src-tauri/src/adapters/: acp.rs  acp_install.rs  antigravity.rs  claude.rs  codex.rs  mod.rs
src-tauri/src/approval/: mcp.rs  mod.rs  socket.rs
src-tauri/src/approval/mcp/: transport.rs
src-tauri/tests/: claude_parse.rs  review.rs  worktree.rs
src-tauri/tests/fixtures/: claude_stream.jsonl  claude_stream_real.jsonl
src/components/: AgentCustomize.tsx  AgentLogo.tsx  AutocompletePopover.tsx  ChangesPanel.tsx  CodeBlock.tsx  ContextPanel.tsx  Conversation.tsx  CustomizationsDialog.tsx  DiffReviewDialog.tsx  DiffViewer.tsx  EmptyState.tsx  ErrorBoundary.tsx  EventStream.tsx  FilePreviewDialog.tsx  FilesTree.tsx  KineMark.tsx  KineloopMark.tsx  Markdown.tsx  NewSession.tsx  PermissionModeSelect.tsx  PromptBar.tsx  RunningIndicator.tsx  SessionHeader.tsx  SessionList.tsx  SettingsDialog.tsx  TerminalView.tsx  ThemeToggle.tsx  TitleBar.tsx  UpdaterHost.tsx  theme-provider.tsx
src/components/__tests__/: AgentCustomize.test.tsx  AgentLogo.test.tsx  ChangesPanel.test.tsx  CodeBlock.test.tsx  ContextPanel.test.tsx  Conversation.test.tsx  CustomizationsDialog.test.tsx  DiffReviewDialog.test.tsx  DiffViewer.test.tsx  EmptyState.test.tsx  EventStream.test.tsx  FilePreviewDialog.test.tsx  FilesTree.test.tsx  Markdown.test.tsx  NewSession.test.tsx  PermissionModeSelect.test.tsx  PromptBar.test.tsx  PromptBarAutocomplete.test.tsx  RunningIndicator.test.tsx  SessionHeader.test.tsx  SessionList.test.tsx  SettingsDialog.test.tsx  SettingsDialogAuth.test.tsx  TerminalView.test.tsx  TitleBar.test.tsx
src/components/ui/: button.tsx  dialog.tsx  scroll-area.tsx  select.tsx  sheet.tsx  switch.tsx  tabs.tsx
src/components/ui/__tests__/: button.smoke.test.tsx
src/lib/: acpCommands.ts  acpNotice.ts  agent.ts  agentAuth.ts  agentConfig.ts  agentPrefs.ts  autocomplete.ts  conductor.ts  contextDerive.ts  inspect.ts  mentions.ts  models.ts  parsePatch.ts  permissions.ts  recents.ts  relativeTime.ts  review.ts  sessions.ts  terminal.ts  tree.ts  tuiCommands.ts  turns.ts  updater.ts  usePromptAutocomplete.ts  workspaces.ts
src/lib/__tests__/: acpCommands.test.ts  acpNotice.test.ts  agent.test.ts  agentConfig.test.ts  agentPrefs.test.ts  autocomplete.test.ts  conductor.test.ts  contextDerive.test.ts  inspect.test.ts  mentions.test.ts  models.test.ts  parsePatch.test.ts  permissions.test.ts  recents.test.ts  relativeTime.test.ts  review.test.ts  sessions.test.ts  terminal.test.ts  tree.test.ts  tuiCommands.test.ts  turns.test.ts  workspaces.test.ts
src/styles/: tokens.css
