[package]
name = "kineloop"
version = "0.1.3"
description = "Local-first desktop orchestrator for AI coding agents"
authors = ["Sharan Karthikeyan"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kineloop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "io-std", "rt-multi-thread", "macros", "net", "sync", "time"] }
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
which = "6"
dirs = "6"
tauri-plugin-process = "2"

# Desktop-only: in-app self-updater (checks a signed latest.json, downloads +
# verifies the update, then relaunches). Not available on mobile targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Unix-only: group-kill of agent process trees (adapters/acp.rs teardown).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only: Job Object kill-on-close teardown of agent process trees
# (adapters/acp.rs KillTreeOnDrop) — the process-group analog for Windows.
[target.'cfg(windows)'.dependencies]
win32job = "2"
