[package]
name = "kine-agent"
version = "0.3.5"
description = "Local-first desktop orchestrator for AI coding agents"
authors = ["Sharan Karthikeyan"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kine_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "io-std", "rt-multi-thread", "macros", "net", "sync", "time"] }
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
which = "6"
dirs = "6"
tauri-plugin-process = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Desktop-only: in-app self-updater (checks a signed latest.json, downloads +
# verifies the update, then relaunches). Not available on mobile targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Optional BYOK API-key storage (auth.rs): the ONLY place Kine Agent persists a
# credential, and only into the OS-native secure store — never SQLite, never argv.
# Native backend is target-gated so each OS pulls only its own store crate
# (Keychain / Windows Credential Manager / Secret Service). Absent stores fail at
# runtime with a clear error, which is fine — API-key auth is opt-in.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

# Unix-only: group-kill of agent process trees (adapters/acp.rs teardown).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows-only: Job Object kill-on-close teardown of agent process trees
# (adapters/acp.rs KillTreeOnDrop) — the process-group analog for Windows.
# Also the Windows-native secure store for BYOK API keys (auth.rs).
[target.'cfg(windows)'.dependencies]
win32job = "2"
keyring = { version = "3", features = ["windows-native"] }
